added required components and services.

--- a/emb-chat-client/src/app/app.component.html
+++ b/emb-chat-client/src/app/app.component.html
@@ -1,2 +1,8 @@
-<h2>{{ title }}</h2>
-<router-outlet />
+<main class="chat-app">
+  <div class="users-list">
+    <app-user-list-window></app-user-list-window>
+  </div>
+  <div class="chat-window">
+    <app-chat-box></app-chat-box>
+  </div>
+</main>
